add intagram frame & footer (test layout web)

--- a/index.html
+++ b/index.html
@@ -93,11 +93,41 @@
                             </div>
                         </div>
                     </section>
+                    <section class="product-featured pd-50">
+
+
+                        <img src="assets/images/test.png" alt="">
+
+
                 </article>
             </main>
         </div>
         <!-- Footer -->
         <footer id="footer-primary">
+            <div class="wrap-content">
+                <div class="footer__list-media">
+                    <a href="https://www.instagram.com/yarntiemlen/" class="media-link">
+                        <div class="footer__media">
+                            <img src="assets/images/footer/instagram.png" alt="instagram">
+                            <p href="" class="footer__media-name">@yarntiemlen</p>
+                        </div>
+                    </a>
+                    <a href="https://www.tiktok.com/@daulungge" class="media-link">
+                        <div class="footer__media">
+                            <img src="assets/images/footer/tiktok.png" alt="instagram">
+                            <p class="footer__media-name">daulungge</p>
+                        </div>
+                    </a>
+                    <a href="" class="media-link">
+                        <div class="footer__media">
+                            <img src="assets/images/footer/mail.png" alt="instagram">
+                            <p class="footer__media-name">tiemlen311@gmail.com</p>
+                        </div>
+                    </a>
+
+
+                </div>
+            </div>
         </footer>
     </div>
 
