pagination product and embed ig posts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Yarn Tiệm Len</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap502/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome611/all.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/fonts.css">
@@ -78,27 +78,58 @@
                     <section class="product-featured pd-50">
                         <div class="wrap-content">
                             <div class="product-featured__inner">
-                                <header class="section__header">
+                                <header class="section__header text-center">
                                     <p class="company-name">Yarn - Tiệm len handmade</p>
-                                    <h2 class="home__title">Nổi bật</h2>
+                                    <h2 class="home__title f-f:semibold f-sz:32px text-capitalize">Nổi bật</h2>
                                 </header>
                                 <div class="product__list flex-container"></div>
-                                <!-- <div class="pagination">
+                                <div class="pagination">
                                     <ul class="pagination__list">
-                                        <li class="pagination__item pagination__item--active">1</li>
+                                        <!-- <li class="pagination__item pagination__item--active">1</li>
                                         <li class="pagination__item pagination__item--next">2</li>
-                                        <li class="pagination__item pagination__item--last">3</li>
+                                        <li class="pagination__item pagination__item--last">3</li> -->
                                     </ul>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </section>
-                    <section class="product-featured pd-50">
-
-
-                        <img src="assets/images/test.png" alt="">
-
-
+                    <section class="ig-post pd-50">
+                        <div class="wrap-content">
+                            <div class="ig-post__inner">
+                                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"></blockquote>
+                                <div class="ig-post__info">
+                                    <header class="section__header">
+                                        <h2 class="home__title">
+                                            <span class="f-f:medium f-sz:28px">Follow tài khoản</span>
+                                            <br>
+                                            <span class="f-f:bold f-sz:60px">instagram</span>
+                                        </h2>
+                                    </header>
+                                    <div class="ig-post__info-list">
+                                        <li class="ig-post__info-item">
+                                            <span class="ig-post__info-item-icon">
+                                                <img class="d-inline-block"src="assets/images/icon-yarn.png" alt="Cập nhật những sản phẩm mới nhất" >
+                                            </span>
+                                            <span class="ig-post__info-item-desc">Cập nhật những sản phẩm mới nhất</span>
+                                        </li>
+                                        <li class="ig-post__info-item">
+                                            <span class="ig-post__info-item-icon">
+                                                <img class="d-inline-block"src="assets/images/icon-yarn.png" alt="Những thông báo quan trọng" >
+                                            </span>
+                                            <span class="ig-post__info-item-desc">Những thông báo quan trọng</span>
+                                        </li>
+                                        <li class="ig-post__info-item">
+                                            <span class="ig-post__info-item-icon">
+                                                <img class="d-inline-block"src="assets/images/icon-yarn.png" alt="Thông tin khuyến mãi" >
+                                            </span>
+                                            <span class="ig-post__info-item-desc">Thông tin khuyến mãi</span>
+                                        </li>
+                                    </div>
+                                    <a class="ig-post__btn" href="https://www.instagram.com/yarntiemlen/" target="_blank">Đi đến instagram <i class="fa-regular fa-arrow-right-long"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </article>
             </main>
         </div>
@@ -124,8 +155,6 @@
                             <p class="footer__media-name">tiemlen311@gmail.com</p>
                         </div>
                     </a>
-
-
                 </div>
             </div>
         </footer>
@@ -133,11 +162,14 @@
 
     <!-- JS -->
     <script src="assets/js/jquery-3.6.4.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap502/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery.twbsPagination.min.js"></script>
     <script src="assets/js/lazyload.min.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/components/components.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script async src="assets/js/functions.js"></script>
+    <script async src="assets/js/variables.js"></script>
+    <script async src="assets/js/components/components.js"></script>
+    <script async src="assets/js/main.js"></script>
+    <script async src="//www.instagram.com/embed.js"></script>
 </body>
 
 </html>
