edit some responsive section and add lazy load for product image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <div class="body-container">
         <!-- Header -->
         <header id="header-primary">
+            <section class="header">
+                <div class="wrap-content">
+                    <div class="header__inner d-flex justify-content-center align-items-center">
+                        <a class="logo" href="">
+                            <figure class="logo__inner">
+                                <img src="assets\images\logo.png" alt="Yarn Tiệm Len">
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="navigation">
                 <div class="wrap-content">
                     <div class="navigation__inner">
