edit layout & add img product

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </section>
-            <section class="navigation">
+            <!-- <section class="navigation">
                 <div class="wrap-content">
                     <div class="navigation__inner">
                         <button class="hamburger"><span></span></button>
@@ -66,7 +66,7 @@
                         </nav>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </header>
         <!-- Main -->
         <div id="body-content">
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="ig-post pd-50">
+                    <!-- <section class="ig-post pd-50">
                         <div class="wrap-content">
                             <div class="ig-post__inner">
                                 <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style="
@@ -345,34 +345,58 @@
                                     </div>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
                 </article>
+                <section class="details-info pd-50">
+                    <div class="wrap-content">
+                        <div class="details-info__inner">
+                            <ul class="warning__list">
+                                <li class="warning__item">
+                                    Chuẩn bị hàng trong 4-7 ngày
+                                </li>
+                                <li class="warning__item">
+                                    Khi đặt hàng vui lòng cọc trước 30% giá trị đơn hàng
+                                </li>
+                                <li class="warning__item">
+                                    Màu sắc sản phẩm có thể chênh lệch so với hình ảnh, do ánh sáng hoặc do mỗi lần nguồn hàng nhập len khác nhau
+                                </li>
+                            </ul>
+                            <div class="qr-code">
+                                <img src="/assets/images/qr-ig.png" alt="QR code instagram">
+                                <img src="/assets/images/qr-tiktok.png" alt="QR code tiktok">
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
         <!-- Footer -->
         <footer id="footer-primary">
-            <div class="wrap-content">
-                <div class="footer__list-media">
-                    <a href="https://www.instagram.com/yarntiemlen/" class="media-link">
-                        <div class="footer__media">
-                            <img src="assets/images/footer/instagram.png" alt="instagram">
-                            <p href="" class="footer__media-name">@yarntiemlen</p>
-                        </div>
-                    </a>
-                    <a href="https://www.tiktok.com/@daulungge" class="media-link">
-                        <div class="footer__media">
-                            <img src="assets/images/footer/tiktok.png" alt="instagram">
-                            <p class="footer__media-name">daulungge</p>
-                        </div>
-                    </a>
-                    <a href="" class="media-link">
-                        <div class="footer__media">
-                            <img src="assets/images/footer/mail.png" alt="instagram">
-                            <p class="footer__media-name">tiemlen311@gmail.com</p>
-                        </div>
-                    </a>
+            <div class="footer__inner pd-30">
+                <div class="wrap-content">
+                    <div class="footer__list-media">
+                        <a href="https://www.instagram.com/yarntiemlen/" class="media-link">
+                            <div class="footer__media">
+                                <img src="assets/images/footer/instagram.png" alt="instagram">
+                                <p href="" class="footer__media-name">@yarntiemlen</p>
+                            </div>
+                        </a>
+                        <a href="https://www.tiktok.com/@daulungge" class="media-link">
+                            <div class="footer__media">
+                                <img src="assets/images/footer/tiktok.png" alt="instagram">
+                                <p class="footer__media-name">daulungge</p>
+                            </div>
+                        </a>
+                        <a href="" class="media-link">
+                            <div class="footer__media">
+                                <img src="assets/images/footer/mail.png" alt="instagram">
+                                <p class="footer__media-name">tiemlen311@gmail.com</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
+
         </footer>
     </div>
 
