--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                                 </li>
                             </ul>
                             <div class="qr-code">
-                                <img src="/assets/images/qr-ig.png" alt="QR code instagram">
-                                <img src="/assets/images/qr-tiktok.png" alt="QR code tiktok">
+                                <img src="assets/images/qr-ig.png" alt="QR code instagram">
+                                <img src="assets/images/qr-tiktok.png" alt="QR code tiktok">
                             </div>
                         </div>
                     </div>
